--- a/笔记/Trex_2020/Trex_2020.md
+++ b/笔记/Trex_2020/Trex_2020.md
@@ -86,12 +86,12 @@
 - **Encoding numeric values**
     > 每个数字作为一个token会导致词汇量过大   
 
-    - 将 $x_ {ti}$ 表示为8字节固定长度字节序列，如 $x_ ti = { (0x00,...,0xff) }^ 8$ 
+    - 将 $x_ {ti}$ 表示为8字节固定长度字节序列，如 $x_ ti = { (0x00,...,0xff) } ^ 8$ 
     - $t_ i = bi-LSTM(x_ {ti})$
 
 ### 阶段1：预训练
 > 预训练时，Masked LM模型在欠约束动态轨迹数据集中学习，对每个执行语义有大致了解的后，在推理过程中就不需要动态执行函数
-1. **Learned embedding**：将上述五个序列（ $x_ f，x_ t，x_ c，x_ o，x_ a$ ）中的所有token生成相同维度( $d_ {emb}$ )的embedding，这样，序列间就可以进行**相加**
+1. **Learned embedding**：将上述五个序列, $x_ f，x_ t，x_ c，x_ o，x_ a$ ，中的所有token生成相同维度， $d_ {emb}$ ，的embedding，这样，序列间就可以进行**相加**
     - $E_ t$：是利用bi-LSTM对字节序列进行编码
     - 其他序列编码，简单将token(one-hot编码)与嵌入矩阵相乘
 2. **Masked LM**
