--- a/笔记/Trex_2020/Trex_2020.md
+++ b/笔记/Trex_2020/Trex_2020.md
@@ -110,22 +110,22 @@
     - mask窗口大小：随机从{1,3,5}中抽取，mask后，调整窗口大小，确定mask百分比不会变
 - **Contextualized embeddings**
     - 通过「自注意力机制」实现上下文关联
-    - $E_ l = (E_ {l,1}, ..., E_ {l,n)}$表示第 l 个自注意力层产生的嵌入
+    - $E_ l = (E_ {l,1}, ..., E_ {l,n})$ 表示第 l 个自注意力层产生的嵌入
 ### 阶段2：finetune
 > 此时的输入已经是函数的静态代码
-> 微调对象：2层的多层感知器$g_ t$和预训练模型$g_ p$
+> 微调对象：2层的多层感知器 $g_ t$ 和预训练模型 $g_ p$ 
 - 使用带标签的数据集进行微调      
-- 堆叠一个 2层多层感知器$g_ t$，将每个函数的embedding平均值作为输入，并生成一个函数嵌入       
+- 堆叠一个 2层多层感知器 $g_ t$ ，将每个函数的embedding平均值作为输入，并生成一个函数嵌入       
 ![](./img/gt.png)         
-> 最后乘以$W_ 2$是为了降维，便于大规模搜素      
+> 最后乘以 $W_ 2$ 是为了降维，便于大规模搜素      
 - 损失函数
 ![](./img/损失函数.png)         
 
-> $l_ ce$：cosine embedding loss       
+> $l_ {ce}$：cosine embedding loss       
 
 ### 阶段3：微调完后
 - 计算函数embedding： $f_ {emb} = g_ t(g_ p (f))$
-- 相似性：$cos(f^ {(1)} _ {emb}, f^ {(2)} _ {emb})$
+- 相似性：$cos(f_ {emb} ^ {(1)} , f_ {emb}^ {(2)})$
 
 
 ## Evaluation
