--- a/笔记/Trex_2020/Trex_2020.md
+++ b/笔记/Trex_2020/Trex_2020.md
@@ -125,7 +125,7 @@
 
 ### 阶段3：微调完后
 - 计算函数embedding： $f_ {emb} = g_ t(g_ p (f))$
-- 相似性： $ cos \left( f_ {emb}^{\left( 1 \right)} , f_ {emb}^{\left( 2 \right)} \right) $ 
+- 相似性： cos( $f_ {emb}^{1} , f_ {emb}^{2}$ )
 
 
 ## Evaluation
